--- a/store/src/app/components/header/header.component.html
+++ b/store/src/app/components/header/header.component.html
@@ -38,7 +38,18 @@
                 Total:
                 <span class="font-bold">{{ '650' | currency}}</span>
             </div>
+            <div class="pt-3 flex justify-between">
+                <button class="bg-rose-600 text-white rounded-full w-9 h-9">
+                    <mat-icon>remove_shopping_cart</mat-icon>
+                </button>
+                <button
+                        routerLink="cart"
+                        class="bg-green-600 text-white rounded-full w-9 h-9">
+                    <mat-icon>remove_shopping_cart</mat-icon>
+                </button>
 
+
+            </div>
         </div>
 
     </mat-menu>
