--- a/store/src/app/pages/cart/cart.component.html
+++ b/store/src/app/pages/cart/cart.component.html
@@ -29,10 +29,12 @@
         <ng-container matColumnDef="quantity">
             <th mat-header-cell *matHeaderCellDef>Quantity</th>
             <td mat-cell *matCellDef="let element">
-                <button mat-icon-button>
+                <button mat-icon-button
+                    (click)="onReduceQuantity(element)">
                     <mat-icon>remove</mat-icon>
                 </button>
-                <button mat-icon-button>
+                <button mat-icon-button
+                    (click)="onAddQuantity(element)">
                     <mat-icon>add</mat-icon>
                 </button>
                 <span>
