--- a/store/src/app/pages/home/home.component.html
+++ b/store/src/app/pages/home/home.component.html
@@ -8,15 +8,20 @@
                 gutterSize="16"
                 [cols]="cols"
                 [rowHeight]="rowHeight">
-            <mat-grid-tile>
+            <mat-grid-tile *ngFor="let product of products">
                 <app-product-box
+                        [product]="product"
                         (addToCart)="onAddToCart($event)"
                         class="w-full"
                         [fullWidthMode]="cols == 1"></app-product-box>
             </mat-grid-tile>
 
         </mat-grid-list>
-        <app-products-header (columnsCountChange)="onColumnsCountChange($event)"></app-products-header>
+        <app-products-header
+                (columnsCountChange)="onColumnsCountChange($event)"
+                (itemsCountChange)="onItemsCountChange($event)"
+                (sortChange)="onSortchange($event)"
+        ></app-products-header>
     </mat-drawer-content>
 
 </mat-drawer-container>
