Implements support for category filter (still using fake store api)

--- a/store/src/app/pages/home/home.component.html
+++ b/store/src/app/pages/home/home.component.html
@@ -20,7 +20,7 @@
         <app-products-header
                 (columnsCountChange)="onColumnsCountChange($event)"
                 (itemsCountChange)="onItemsCountChange($event)"
-                (sortChange)="onSortchange($event)"
+                (sortChange)="onSortChange($event)"
         ></app-products-header>
     </mat-drawer-content>
 
