--- a/store/src/app/pages/cart/cart.component.html
+++ b/store/src/app/pages/cart/cart.component.html
@@ -30,11 +30,11 @@
             <th mat-header-cell *matHeaderCellDef>Quantity</th>
             <td mat-cell *matCellDef="let element">
                 <button mat-icon-button
-                    (click)="onReduceQuantity(element)">
+                        (click)="onReduceQuantity(element)">
                     <mat-icon>remove</mat-icon>
                 </button>
                 <button mat-icon-button
-                    (click)="onAddQuantity(element)">
+                        (click)="onAddQuantity(element)">
                     <mat-icon>add</mat-icon>
                 </button>
                 <span>
@@ -74,7 +74,9 @@
 
             </td>
             <td mat-footer-cell *matFooterCellDef>
-                <button mat-raised-button color="primary" class="float-right">
+                <button
+                        (click)="onCheckout()"
+                        mat-raised-button color="primary" class="float-right">
                     Proceed to checkout
                 </button>
 
